--- a/charts/python/values.yaml
+++ b/charts/python/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 image:
   pullPolicy: IfNotPresent
-  repository: r.cfcr.io/kostis-codefresh/kostis-codefresh/python-flask-sampleapp
+  repository:  r.cfcr.io/pangborn.consulting.llc/my-flask-app
   tag: master
 service:
   name: python
